Backport r211502: PR target/59843 Fix arm_neon.h ZIP/UZP/TRN for bigendian

2014-06-10  Alan Lawrence  <alan.lawrence@arm.com>

	gcc/:
		* config/aarch64/aarch64-modes.def: Add V1DFmode.
		* config/aarch64/aarch64.c (aarch64_vector_mode_supported_p):
		Support V1DFmode.

	gcc/testsuite/:
	       * gcc.dg/vect/vect-singleton_1.c: New file.

From-SVN: r212355